# dsp-utils

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/conf/: .zshrc  custom.zsh-theme
.devcontainer/scripts/: install-armadillo.sh  install-arrayfire.sh  install-catch2.sh  install-cookiecutter.sh  install-gcc10.sh  install-git-lfs.sh  install-itpp.sh  install-json.sh  install-ldpc_simd.sh  install-matplotpp.sh  install-obeca-deps.sh  install-openblas-lapack.sh  install-spdlog.sh
dsp/: .clang-format  .gitignore  CMakeLists.txt  README.md
dsp/cmake/: CPackConfig.cmake  dspConfig.cmake.in
dsp/doc/: Doxyfile
dsp/include/sigpack/: sigpack.h
dsp/include/sigpack/base/: base.h
dsp/include/sigpack/fftw/: fftw.h
dsp/include/sigpack/filter/: filter.h
dsp/include/sigpack/gplot/: gplot.h
dsp/include/sigpack/image/: image.h
dsp/include/sigpack/spectrum/: spectrum.h
dsp/src/: CMakeLists.txt
dsp/src/utils/: CMakeLists.txt  FFTW_Convolver.cpp  FFTW_Convolver.hpp  FFTW_Correlator.cpp  FFTW_Correlator.hpp  dsp_operations.cpp  dsp_operations.h
dsp/test/: CMakeLists.txt  test.cpp
dsp/test/utils/: CMakeLists.txt  utils_test.cpp
